--- a/05-ols-estimation.Rmd
+++ b/05-ols-estimation.Rmd
@@ -67,7 +67,7 @@ How does R determine the coefficient values of $\hat{\beta}_0=11.321$ and $\hat{
 
 ```{r echo=FALSE}
 toy = data.frame(
-  x = c(3, 1, 3, 5, 2),
+  x = c(30, 10, 30, 50, 20),
   y = c(63, 44, 40, 68, 25)
 )
 
@@ -84,20 +84,20 @@ kable(toy,
 
 Which of the following two models fits these data better?
 
-- **Model A:** $~~\hat{Y_i} = 28 + 8(X_i)$
-- **Model B:** $~~\hat{Y_i} = 20 + 10(X_i)$
+- **Model A:** $~~\hat{Y_i} = 28 + 0.8(X_i)$
+- **Model B:** $~~\hat{Y_i} = 20 + 1(X_i)$
 
 We could plot the data and both lines and try to determine which seems to fit better. 
 
 ```{r echo=FALSE, out.width='45%', fig.cap="Scatterplot of the observed toy data and the OLS fitted regression line for two models.", fig.show='hold'}
 ggplot(data = toy, aes(x = x, y = y)) +
-      geom_abline(intercept = 28, slope = 8) +
+      geom_abline(intercept = 28, slope = 0.8) +
       geom_point(size = 4) +
       theme_bw() +
       ggtitle("Model A")
 
 ggplot(data = toy, aes(x = x, y = y)) +
-      geom_abline(intercept = 20, slope = 10, linetype = "dotted") +
+      geom_abline(intercept = 20, slope = 1, linetype = "dotted") +
       geom_point(size = 4) +
       theme_bw() +
       ggtitle("Model B")
@@ -115,7 +115,7 @@ Remember, to compute the residuals, we will first need to  compute the predicted
 
 ```{r echo=FALSE, results='asis'}
 toy2 = toy
-toy$Predicted= 28 + 8*toy$x
+toy$Predicted= 28 + 0.8*toy$x
 toy$Residual = toy$y - toy$Predicted
 
 kable(toy, 
@@ -130,7 +130,7 @@ kable(toy,
 ```
 
 ```{r echo=FALSE, results='asis'}
-toy2$Predicted = 20 + 10*toy2$x
+toy2$Predicted = 20 + 1.0*toy2$x
 toy2$Residual = toy2$y - toy2$Predicted
 
 kable(toy2,
@@ -190,6 +190,57 @@ Summing these squared values for each model we obtain:
 
 Once we have quantified the model misfit, we can choose the model that has the least amount of error. Since Model A has a lower SSE than Model B, we would conclude that Model A is the better fitting model to the data.
 
+<br />
+
+
+### Visualizing the SSE
+
+To further understand the sum of squared error, we can examine a visual representation of the SSE for Model A. Recall that visually, the residual is the vertical distance between an observation and the fitted value (which lie on the fitted line). The residual indicates how different these two quantities are on the *Y*-metric. In the formula we squared each of the residuals. Visually, this is equivalent to producing the area of a square that has side length equal to the absolute value of the residual.
+
+```{r echo=FALSE, fig.cap="Scatterplot of the observed toy data and the OLS fitted regression line for Model A. The left-hand plot visually displays the residual values as line segments with negative residuals shown as dashed lines. The right-hand plot visually shows the squared residuals as the area of a square with side length equal to the absolute value of the residual.", fig.show='hold', out.width='45%'}
+ggplot(data = toy, aes(x = x, y = y)) +
+  geom_segment(x = 30, xend = 30, y = 52, yend = 63, color = "#c62f4b") +
+  geom_segment(x = 10, xend = 10, y = 36, yend = 44, color = "#c62f4b") +
+  geom_segment(x = 30, xend = 30, y = 40, yend = 52, color = "#c62f4b", linetype = "dashed") +
+  geom_segment(x = 20, xend = 20, y = 25, yend = 44, color = "#c62f4b", linetype = "dashed") +
+  geom_abline(intercept = 28, slope = 0.8) +
+  geom_point(size = 4) +
+  theme_bw() +
+  xlim(0, 70) +
+  ylim(0, 70) +
+  ggtitle("Model A")
+
+
+ggplot(data = toy, aes(x = x, y = y)) +
+  geom_rect(xmin = 19, xmax = 30, ymin = 52, ymax = 63, color = "black", fill = "#c62f4b", alpha = 0.2) +
+  geom_rect(xmin = 2, xmax = 10, ymin = 36, ymax = 44,  color = "black", fill = "#c62f4b", alpha = 0.2) +
+  geom_rect(xmin = 30, xmax = 42, ymin = 40, ymax = 52, color = "black", fill = "#c62f4b", alpha = 0.2) +
+  geom_rect(xmin = 20, xmax = 39, ymin = 25, ymax = 44, color = "black", fill = "#c62f4b", alpha = 0.2) +
+  geom_abline(intercept = 28, slope = 0.8) +
+  geom_point(size = 4) +
+  theme_bw() +
+  xlim(0, 70) +
+  ylim(0, 70) +
+  ggtitle("Model A")
+```
+
+The SSE is simply the total area encompassed by all of the squares. Note that the observation that is directly on the line has a residual of 0 and thus does not contribute an quantity to the SSE. If you computed the SSE for a line with different intercept or slope values, the SSE will be different. The plot below shows what this might look like for the flat line produced by $~~\hat{Y_i} = 50$.
+
+```{r echo=FALSE, fig.cap="Scatterplot of the observed toy data and the fitted flat line with Y-intercept of 50. The plot visually shows the squared residuals as the area of a square with side length equal to the absolute value of the residual.", }
+ggplot(data = toy, aes(x = x, y = y)) +
+  geom_rect(xmin = 17, xmax = 30, ymin = 50, ymax = 63, color = "black", fill = "#c62f4b", alpha = 0.2) +
+  geom_rect(xmin = 4, xmax = 10, ymin = 44, ymax = 50,  color = "black", fill = "#c62f4b", alpha = 0.2) +
+  geom_rect(xmin = 30, xmax = 40, ymin = 40, ymax = 50, color = "black", fill = "#c62f4b", alpha = 0.2) +
+  geom_rect(xmin = 32, xmax = 50, ymin = 50, ymax = 68, color = "black", fill = "#c62f4b", alpha = 0.2) +
+  geom_rect(xmin = 20, xmax = 45, ymin = 25, ymax = 50, color = "black", fill = "#c62f4b", alpha = 0.2) +
+  geom_hline(yintercept = 50) +
+  geom_point(size = 4) +
+  theme_bw() +
+  xlim(0, 70) +
+  ylim(0, 70)
+```
+
+@Powell:2015 created an [interactive website](http://setosa.io/ev/ordinary-least-squares-regression/) to help understand how the SSE is impacted by changing the intercept or slope of a line. You can also see how indicidual observations impact the SSE value.
 
 <br />
 
