Added Coefficient-Level Inference chapter

--- a/modeling.bib
+++ b/modeling.bib
@@ -1,21 +1,43 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrew Zieffler at 2020-05-20 08:16:46 -0500 
+%% Created for Andrew Zieffler at 2020-05-22 09:47:03 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{Amrhein:2019,
+	Author = {Valentin Amrhein and Sander Greenland and Blake Mc{S}hane},
+	Date-Added = {2020-05-22 09:44:24 -0500},
+	Date-Modified = {2020-05-22 09:46:45 -0500},
+	Journal = {Nature},
+	Pages = {305-307},
+	Title = {Retire statistical significance},
+	Volume = {567},
+	Year = {2019}}
+
+@article{Hubbard:2019,
+	Author = {Hubbard, R. and Haig, B. D. and Parsa, R. A.},
+	Date-Added = {2020-05-21 21:11:48 -0500},
+	Date-Modified = {2020-05-21 21:13:51 -0500},
+	Doi = {10.1080/00031305.2018.1464947},
+	Journal = {The American Statistician},
+	Pages = {91-98},
+	Title = {The Limited Role of Formal Statistical Inference in Scientific Inference},
+	Volume = {73},
+	Year = {2019}}
+
 @misc{Powell:2015,
 	Author = {Victor Powell and Lewis Lehe},
 	Date-Added = {2020-05-20 08:12:16 -0500},
 	Date-Modified = {2020-05-20 08:16:40 -0500},
-	Howpublished = {Explained Visually: A Setosa Project },
+	Howpublished = {Explained Visually: A Setosa Project},
 	Title = {Ordicary least squares regression: Explained Visually},
 	Url = {https://setosa.io/ev/ordinary-least-squares-regression/},
-	Year = {2015}}
+	Year = {2015},
+	Bdsk-Url-1 = {https://setosa.io/ev/ordinary-least-squares-regression/}}
 
 @book{Anderson:2008,
 	Address = {New York},
