--- a/modeling.bib
+++ b/modeling.bib
@@ -1,12 +1,55 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrew Zieffler at 2020-06-09 07:55:53 -0500 
+%% Created for Andrew Zieffler at 2020-06-17 16:57:43 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{What-Works-Clearinghouse:2020,
+	Address = {Washington, DC},
+	Author = {{What Works Clearinghouse}},
+	Date-Added = {2020-06-17 16:48:46 -0500},
+	Date-Modified = {2020-06-17 16:57:41 -0500},
+	Institution = {National Center for Education Evaluation and Regional Assistance, Institute of Education Sciences, U.S. Department of Education},
+	Number = {ED602035},
+	Title = {Procedures Handbook, Version 4.1},
+	Url = {http://ies.ed.gov/ncee/wwc/Handbooks},
+	Year = {2020}}
+
+@article{Bonferroni:1936,
+	Author = {Bonferroni, Carlo E.},
+	Date-Added = {2020-06-17 15:33:51 -0500},
+	Date-Modified = {2020-06-17 15:37:12 -0500},
+	Journal = {Pubblicazioni del R Istituto Superiore di Scienze Economiche e Commerciali di Firenze},
+	Pages = {3--62},
+	Title = {Teoria statistica delle classi e calcolo delle probabilit{\`a}},
+	Volume = {8},
+	Year = {1936}}
+
+@techreport{Schochet:2008,
+	Address = {Washington, DC},
+	Author = {Peter Z. Schochet},
+	Date-Added = {2020-06-17 14:41:47 -0500},
+	Date-Modified = {2020-06-17 14:44:27 -0500},
+	Institution = {National Center for Education Evaluation and Regional Assistance, Institute of Education Sciences, U.S. Department of Education},
+	Number = {NCEE 2008-4018},
+	Title = {Technical Methods Report: Guidelines for Multiple Testing in Impact Evaluations},
+	Url = {http://ncee.ed.gov},
+	Year = {2008}}
+
+@article{Dunn:1961,
+	Author = {Dunn, Olive Jean},
+	Date-Added = {2020-06-17 14:24:00 -0500},
+	Date-Modified = {2020-06-17 14:25:08 -0500},
+	Journal = {Journal of the American Statistical Association},
+	Number = {293},
+	Pages = {52--64},
+	Title = {Multiple comparisons among means},
+	Volume = {56},
+	Year = {1961}}
 
 @book{McElreath:2016,
 	Address = {New York},
