--- a/modeling.bib
+++ b/modeling.bib
@@ -1,12 +1,23 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrew Zieffler at 2020-06-17 16:57:43 -0500 
+%% Created for Andrew Zieffler at 2020-06-27 15:39:45 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Glavin:2011,
+	Author = {Paul Glavin and Scott Schieman and Sarah Reid},
+	Date-Added = {2020-06-27 15:39:36 -0500},
+	Date-Modified = {2020-06-27 15:39:36 -0500},
+	Journal = {Journal of Health and Social Behavior},
+	Number = {1},
+	Pages = {43-57},
+	Title = {Boundary-Spanning Work Demands and Their Consequences for Guilt and Psychological Distress},
+	Volume = {52},
+	Year = {2011}}
 
 @techreport{What-Works-Clearinghouse:2020,
 	Address = {Washington, DC},
@@ -17,7 +28,8 @@
 	Number = {ED602035},
 	Title = {Procedures Handbook, Version 4.1},
 	Url = {http://ies.ed.gov/ncee/wwc/Handbooks},
-	Year = {2020}}
+	Year = {2020},
+	Bdsk-Url-1 = {http://ies.ed.gov/ncee/wwc/Handbooks}}
 
 @article{Bonferroni:1936,
 	Author = {Bonferroni, Carlo E.},
@@ -38,7 +50,8 @@
 	Number = {NCEE 2008-4018},
 	Title = {Technical Methods Report: Guidelines for Multiple Testing in Impact Evaluations},
 	Url = {http://ncee.ed.gov},
-	Year = {2008}}
+	Year = {2008},
+	Bdsk-Url-1 = {http://ncee.ed.gov}}
 
 @article{Dunn:1961,
 	Author = {Dunn, Olive Jean},
